fix select.css spacing to be consistent\

--- a/Select/Select.css
+++ b/Select/Select.css
@@ -79,7 +79,10 @@
   z-index: 1000;
 }
 
-.options { padding: 0; margin: 0; }
+.options {
+  padding: 0;
+  margin: 0;
+}
 
 ::slotted(li) {
   padding: .5em 1em;
